Poor performance with QuadriFlow on high density meshes, eats RAM, and refuses to cancel when pressing Esc #70358

Closed
opened 2019-09-29 17:03:52 +02:00 by Frozen_Death_Knight · 14 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.81 (sub 12), branch: master (modified), commit date: 2019-09-27 17:16, hash: be985bdde2
Worked: (optional)

Short description of error
I tried using the baseline settings for the QuadriFlow Remesher on a model with around 728k verts with a ratio of 1.000. The process however was incredibly slow and did not reach 50% until several minutes of waiting. Once that happened, QuadriFlow refused to complete the action and cancelling the action did nothing. The process also ate an incredible amount of RAM, practically maxing out mine which has 32 GB built in.
Desktop 2019.09.29 - 16.37.19.03.mp4.mov

Exact steps for others to reproduce the error
You can try using QuadriFlow on the sculpt file shown in the video here.

Old Bird.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.81 (sub 12), branch: master (modified), commit date: 2019-09-27 17:16, hash: `be985bdde2` Worked: (optional) **Short description of error** I tried using the baseline settings for the QuadriFlow Remesher on a model with around 728k verts with a ratio of 1.000. The process however was incredibly slow and did not reach 50% until several minutes of waiting. Once that happened, QuadriFlow refused to complete the action and cancelling the action did nothing. The process also ate an incredible amount of RAM, practically maxing out mine which has 32 GB built in. [Desktop 2019.09.29 - 16.37.19.03.mp4.mov](https://archive.blender.org/developer/F7779854/Desktop_2019.09.29_-_16.37.19.03.mp4.mov) **Exact steps for others to reproduce the error** You can try using QuadriFlow on the sculpt file shown in the video here. [Old Bird.blend](https://archive.blender.org/developer/F7779860/Old_Bird.blend)

Added subscriber: @Frozen_Death_Knight

Added subscriber: @Frozen_Death_Knight
Member

Added subscribers: @brecht, @PabloDobarro

Added subscribers: @brecht, @PabloDobarro
Member

You should not be using Quadriflow to remesh with a target count that high. I don't recommend to use any value higher than 50k target faces. If you need more resolution, you should use Quadriflow to calculate a low poly subdividable mesh and the reproject the details back with a multires modifier in a higher subdivision level.
@brecht Can we change the default settings in Quadrifllow to use target face count by default instead of ratio?

You should not be using Quadriflow to remesh with a target count that high. I don't recommend to use any value higher than 50k target faces. If you need more resolution, you should use Quadriflow to calculate a low poly subdividable mesh and the reproject the details back with a multires modifier in a higher subdivision level. @brecht Can we change the default settings in Quadrifllow to use target face count by default instead of ratio?

@PabloDobarro I've tried that and have managed to get better results. The problem is though that QuadriFlow allows you to use settings that it will never be able to calculate properly. Just for comparison, this is how ZRemesher behaves on the exact same model when using a similar setting as the 1.000 ratio in Blender:

Desktop 2019.09.29 - 17.29.55.04.mp4

ZRemesher doesn't try to hit 700k+, but instead creates a quad mesh with a much more manageable density that it can calculate. I think QuadriFlow should behave similarly while using the ratio setting to avoid issues like the ones I reported.

@PabloDobarro I've tried that and have managed to get better results. The problem is though that QuadriFlow allows you to use settings that it will never be able to calculate properly. Just for comparison, this is how ZRemesher behaves on the exact same model when using a similar setting as the 1.000 ratio in Blender: [Desktop 2019.09.29 - 17.29.55.04.mp4](https://archive.blender.org/developer/F7779912/Desktop_2019.09.29_-_17.29.55.04.mp4) ZRemesher doesn't try to hit 700k+, but instead creates a quad mesh with a much more manageable density that it can calculate. I think QuadriFlow should behave similarly while using the ratio setting to avoid issues like the ones I reported.

I still think ratio is the more intuitive control. We could perhaps initialize the ratio automatically to a value that generates no more than e.g. 100k faces? So that if you have a 1k mesh, the ratio is still 1.0 and it'll still generate 1K faces. But if you have 1m it becomes 0.1 by default and doesn't do anything excessive.

I still think ratio is the more intuitive control. We could perhaps initialize the ratio automatically to a value that generates no more than e.g. 100k faces? So that if you have a 1k mesh, the ratio is still 1.0 and it'll still generate 1K faces. But if you have 1m it becomes 0.1 by default and doesn't do anything excessive.

I'm also not sure how much this performance and memory usage depends on the input mesh vs. output mesh resolution.

If you're generating a low poly mesh from a high poly mesh, it would make sense to decimate the high poly mesh to e.g. 4x the low poly resolution before running QuadriFlow.

I'm also not sure how much this performance and memory usage depends on the input mesh vs. output mesh resolution. If you're generating a low poly mesh from a high poly mesh, it would make sense to decimate the high poly mesh to e.g. 4x the low poly resolution before running QuadriFlow.

Added subscriber: @AlbertoVelazquez

Added subscriber: @AlbertoVelazquez

Like an artist I vote for face count, is the first thing that I do every time.

An user rarely want a ratio of triangles, because rarely he knows the number of polygons of the model. He only want a clear number of polygons, because he know the final number that he needs.

In reality I don't understand why to use other mode than face count. More when quadriflow is not really good in create dense meshes.

Like an artist I vote for face count, is the first thing that I do every time. An user rarely want a ratio of triangles, because rarely he knows the number of polygons of the model. He only want a clear number of polygons, because he know the final number that he needs. In reality I don't understand why to use other mode than face count. More when quadriflow is not really good in create dense meshes.
Pablo Dobarro self-assigned this 2019-09-30 21:32:29 +02:00

I would say keep ratio as default, as Brecht already mentioned. QuadriFlow simply needs to get smarter and not overshoot the amount of quads it can produce. ZRemesher on average produces around 120-150k verts when used on a human looking model at max settings, which should be a decent goal to set for QuadriFlow. Trying to go beyond that will make it too taxing on pretty much any computer.

I would say keep ratio as default, as Brecht already mentioned. QuadriFlow simply needs to get smarter and not overshoot the amount of quads it can produce. ZRemesher on average produces around 120-150k verts when used on a human looking model at max settings, which should be a decent goal to set for QuadriFlow. Trying to go beyond that will make it too taxing on pretty much any computer.

I don't see why don't use the face counts when Zremesher uses face count by default.

I don't see why don't use the face counts when Zremesher uses face count by default.

Added subscriber: @Xorrito

Added subscriber: @Xorrito

Face count by default makes more sense to me.

Face count by default makes more sense to me.

This issue was referenced by 3052229264

This issue was referenced by 3052229264c1fedc76d531e2096584d0385c5737
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70358
No description provided.