Fix T70358: Use face count in Quadriflow by default

Reviewed By: brecht

Maniphest Tasks: T70358

Differential Revision: https://developer.blender.org/D5958